changed base title

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,7 +5,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <title>
-        {% block title %}  {% endblock title %} | D_hive
+        {% block title %}  {% endblock title %} | Django_hive
     </title>
 </head>
 <body>
